--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>鮑先生</strong>, i like naruto<br />
-					responsive site template freebie<br />
+					i like to eat steak、burger<br />
 					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
 				</div>
 			</header>
